# humandetector

./: CMakeLists.txt  Makefile.am  README.md  configure.ac  date-seq-2s.sh  errlist.cpp  errlist.h  human-detector.cpp  number2words.cpp  number2words.h  platform.h  put-temperature-db.cpp  put-temperature-json.cpp  say-number.cpp  send-temp-svc.sh  sigur-last-card.cpp  t1.txt  usb-rfid-card.cpp  util-cmd.cpp  util-cmd.h  utildate.cpp  utildate.h  utilstring.cpp  utilstring.h  utiltty.cpp  utiltty.h  wavemap.cpp  wavemap.h  wt-sigur.cpp  wt-sigur.h
tests/: number-in-words.cpp  number2wav.cpp
tools/: mkwav2code.sh
